--- a/Digit_App/templates/template.html
+++ b/Digit_App/templates/template.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--Simranjeet Singh - Data Scientist-->
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -21,10 +22,12 @@
 <body>
 
    <div class="container">
-
-    <div class="page-header">
-        <h1>Digit classifier</h1>
-        <p class="lead">Integration of scikit-learn and flask</p>
+     
+    <div class="jumbotron jumbotron-fluid">
+    <div class="container">
+    <h1 class="display-4">MNIST Digit Recognition</h1>
+    <p class="lead">Scikit-Learn and Ensemble Learning Techniques Integerated in Flask.</p>
+    </div>
     </div>
 
     <canvas id="sketch" style="border: 1px solid black; cursor: crosshair;" width="400" height="400"></canvas>
@@ -66,6 +69,10 @@
        });
 
     </script>
+     
+     <a href='https://github.com/simranjeet97' class="btn-lng btn-social-icon btn-github">
+  <span class="fa fa-github"></span>
+</a>
 
   </div>
 
